# comext-fetcher

./: .gitignore  README.md  pyproject.toml
config/: config.json  main.json  transport.json
configs/: example.json
data/metadata/: FULL.txt
fetcher/: __init__.py  __main__.py  cli.py  client.py  coverage.py  downloader.py  parquet.py
src/comext_fetcher/: __main__.py  cli.py  client.py  downloader.py  models.py  parquet.py
tests/: test_parquet_conversion.py
